# oatool

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
convert_google_spec/: Cargo.toml
convert_google_spec/src/: lib.rs
convert_google_spec/src/google_to_openapi/: google_to_openapi.rs  mod.rs
convert_google_spec/src/openapi_to_google/: mod.rs
google_discovery/: Cargo.toml
google_discovery/src/: from_google_to_openapi.rs  from_openapi.rs  from_openapi_to_google.rs  lib.rs  schema.rs
google_discovery/src/google_to_openapi/: mod.rs
google_discovery/src/openapi_to_google/: mod.rs
google_discovery_spec/: Cargo.toml  README.md
google_discovery_spec/src/: lib.rs  schema.rs
openapi_validation/: Cargo.toml
openapi_validation/src/: field_assert.rs  lib.rs  validation_results.rs
src/: cli.yml  error.rs  main.rs  spec.rs  validation.rs
