[package]
name = "oatool"
version = "0.2.0"
authors = ["Jordi Polo Carres <mumismo@gmail.com>"]
description = "Tool to manage OpenAPI spec files"

documentation = "https://github.com/JordiPolo/oatool"
homepage = "https://github.com/JordiPolo/oatool"
repository = "https://github.com/JordiPolo/oatool"

keywords = ["openapi", "CLI"]
license = "MIT/Apache-2.0"


[dependencies]
clap = "2"
error-chain = "0.10"
google_discovery = { path = "google_discovery" }
# yaml-rust = { path = "../yaml-rust" }
# serde_yaml = { path = "../serde-yaml" }

[dependencies.openapi]
  git = "https://github.com/JordiPolo/openapi"
  branch = "feature/reorder_output"
