[package]
name = "oatool"
version = "0.8.0"
authors = ["Jordi Polo Carres <mumismo@gmail.com>"]
description = "Tool to transform OpenAPI spec files"

documentation = "https://github.com/JordiPolo/oatool"
homepage = "https://github.com/JordiPolo/oatool"
repository = "https://github.com/JordiPolo/oatool"

keywords = ["openapi", "CLI"]
license = "MIT/Apache-2.0"


[dependencies]
clap = "2"
error-chain = "0.10"
google_discovery_spec = { path = "google_discovery_spec" }
convert_google_spec = { path = "convert_google_spec" }
openapi_validation = { path = "openapi_validation" }

[dependencies.openapi]
  git = "https://github.com/softprops/openapi"
  rev = "bc778470"


[profile.release]
lto = true
