[package]
name = "convert_google_spec"
version = "0.1.0"
authors = ["Jordi Polo Carres <jcarres@mdsol.com>"]

[dependencies]
error-chain = "0.10"
# Inflector = "*"


# [dependencies.yaml-merge-keys]
# version = "0.2.0"
# features = ["serde_yaml"]
google_discovery_spec = { path = "../google_discovery_spec" }


[dependencies.openapi]
  git = "https://github.com/softprops/openapi"
  rev = "bc778470"

[dependencies.Inflector]
  git = "https://github.com/jordipolo/Inflector"
  rev = "8d38a0a"