[package]
name = "google_discovery"
version = "0.1.0"
authors = ["Jordi Polo Carres <jcarres@mdsol.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
error-chain = "0.10"


# [dependencies.yaml-merge-keys]
# version = "0.2.0"
# features = ["serde_yaml"]


[dependencies.openapi]
  git = "https://github.com/JordiPolo/openapi"
  branch = "feature/reorder_output"