[package]
name = "google_discovery_spec"
version = "0.1.0"
authors = ["Jordi Polo Carres <mumismo@gmail.com>"]
description = "Serialization and deserialization for google spec."
readme = "README.md"
repository = "https://github.com/jordipolo/google_discovery_spec"
license = "MIT"
keywords = ["google", "serialization"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
error-chain = "0.10"

yaml-rust = "*"

[dependencies.yaml-merge-keys]
version = "0.2.0"
features = ["serde_yaml"]
