[package]
name = "openapi_validation"
version = "0.1.0"
authors = ["Jordi Polo <mumismo@gmail.com>"]

[dependencies]
regex = "0.2"
#term = "0.4.6"
# Inflector = { path = "../../Inflector" }

[dependencies.openapi]
  git = "https://github.com/softprops/openapi"
  rev = "bc778470"


[dependencies.Inflector]
  git = "https://github.com/jordipolo/Inflector"
  rev = "8d38a0a"